force-app/main/default/objects/Employment_Information__c/Employment_Information__c.object-meta.xml
<CustomObject>
    <label>Employment Information</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Employment Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>