force-app/main/default/objects/Employment_Information__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Permanent employee</fullName>
            </value>
            <value>
                <fullName>Temporary employee</fullName>
            </value>
            <value>
                <fullName>Self-employed</fullName>
            </value>
            <value>
                <fullName>Conditional employment (synonym:</fullName>
            </value>
            <value>
                <fullName>provisional employment)</fullName>
            </value>
            <value>
                <fullName>Cooperative student employment</fullName>
            </value>
            <value>
                <fullName>Practicum student work experience</fullName>
            </value>
            <value>
                <fullName>Other — not elsewhere classified</fullName>
            </value>
            <value>
                <fullName>Not collected</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>