force-app/main/default/objects/Employment_Information__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Pharmacy, Educational Institution</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Employment Information</relationshipLabel>
    <relationshipName>Employer_Employment_Information</relationshipName>
    <type>Lookup</type>
</CustomField>