force-app/main/default/objects/Employment_Information__c/fields/Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Employer_Name__c</fullName>
    <formula>Employer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employer Name</label>
    <type>Text</type>
</CustomField>