force-app/main/default/objects/Employment_Information__c/fields/Employer_Name_and_Address__c.field-meta.xml
<CustomField>
    <fullName>Employer_Name_and_Address__c</fullName>
    <label>Employer Name and Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>