force-app/main/default/objects/Employment_Information__c/fields/Employer_Name_and_Area__c.field-meta.xml
<CustomField>
    <fullName>Employer_Name_and_Area__c</fullName>
    <formula>Employer__r.Pharmacy_Name_and_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employer Name and Area</label>
    <type>Text</type>
</CustomField>