force-app/main/default/objects/Employment_Information__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>Case manager</fullName>
            </value>
            <value>
                <fullName>Chief executive officer/registrar</fullName>
            </value>
            <value>
                <fullName>Clinical specialist</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Coordinator</fullName>
            </value>
            <value>
                <fullName>Direct care provider</fullName>
            </value>
            <value>
                <fullName>Director/assistant director</fullName>
            </value>
            <value>
                <fullName>Educator</fullName>
            </value>
            <value>
                <fullName>Industrial pharmacist</fullName>
            </value>
            <value>
                <fullName>Manager/assistant manager</fullName>
            </value>
            <value>
                <fullName>Owner/operator</fullName>
            </value>
            <value>
                <fullName>Professional leader</fullName>
            </value>
            <value>
                <fullName>Relief pharmacist</fullName>
            </value>
            <value>
                <fullName>Researcher</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not collected</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>