force-app/main/default/objects/Employment_Information__c/fields/Registrant_Name__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Name__c</fullName>
    <formula>Registrant__r.FirstName + &apos; &apos; +  Registrant__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registrant Name</label>
    <type>Text</type>
</CustomField>