force-app/main/default/objects/Employment_Information__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pharmacist</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Intern</fullName>
            </value>
            <value>
                <fullName>Pharmacy Technician</fullName>
            </value>
            <value>
                <fullName>Pharmacy Technician Candidate</fullName>
            </value>
            <value>
                <fullName>Pharmacy Assistant</fullName>
            </value>
            <value>
                <fullName>Officer/Director</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>