force-app/main/default/objects/Employment_Information__c/listViews/Employment_Information.listView-meta.xml
<ListView>
    <fullName>Employment_Information</fullName>
    <columns>NAME</columns>
    <columns>Employer__c</columns>
    <columns>Registrant__c</columns>
    <columns>Type__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>Employment Information</label>
</ListView>